--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
     />
 
-    <title>Vite + React</title>
+    <title>Trello App</title>
   </head>
   <body>
     <div id="root"></div>
